# ros2-face-hand-pose-landmarks-detection

./: README.md  build.sh
docker/: docker-compose.yaml
robot_ws/src/face_hand_pose_detection/: CMakeLists.txt  package.xml
robot_ws/src/face_hand_pose_detection/face_hand_pose_detection/: face_hand_pose_detection.py  face_hand_pose_detection_node.py
robot_ws/src/face_hand_pose_detection/launch/: face_hand_pose_detection.launch.py
robot_ws/src/face_hand_pose_detection/params/: face_hand_pose_detection.yaml
robot_ws/src/face_hand_pose_detection_msgs/: CMakeLists.txt  package.xml
robot_ws/src/face_hand_pose_detection_msgs/msg/: DetectionResult.msg  Landmark.msg
